--- a/bigbluebutton-client/src/org/bigbluebutton/main/views/AudioSelectionWindow.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/main/views/AudioSelectionWindow.mxml
@@ -114,23 +114,27 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 				<mx:Image source="@Embed('assets/microphone80.png')" />
 				<mx:Button id="btnMicrophone" tabIndex="{baseIndex+1}" click="onMicClick()"
 						   label="{ResourceUtil.getInstance().getString('bbb.audioSelection.btnMicrophone.label')}"
-						   accessibilityName="{ResourceUtil.getInstance().getString('bbb.audioSelection.btnMicrophone.toolTip')}"/>
+						   toolTip="{ResourceUtil.getInstance().getString('bbb.audioSelection.btnMicrophone.toolTip')}"/>
 			</mx:VBox>
 			<mx:VRule id="vruleListen" height="100%" width="5%" />
 			<mx:VBox id="vboxListen" height="100%" width="30%" horizontalAlign="center">
 				<mx:Image source="@Embed('assets/speaker80.png')" />
 				<mx:Button id="btnListenOnly" tabIndex="{baseIndex+2}" click="onListenClick()"
 						   label="{ResourceUtil.getInstance().getString('bbb.audioSelection.btnListenOnly.label')}"
-						   accessibilityName="{ResourceUtil.getInstance().getString('bbb.audioSelection.btnListenOnly.toolTip')}" />
+						   toolTip="{ResourceUtil.getInstance().getString('bbb.audioSelection.btnListenOnly.toolTip')}" />
 			</mx:VBox>
 			<mx:VRule id="vrulePhone" height="100%" width="5%" />
 			<mx:VBox id="vboxPhone" height="100%" width="30%" horizontalAlign="center">
 				<mx:Image source="@Embed('assets/phone80.png')" />
-				<mx:Text id="txtPhone" width="100%" />
+				<mx:TextArea id="txtPhone" width="100%" height="100%" 
+							 borderSkin="{null}" verticalScrollPolicy="off" 
+							 editable="false" tabIndex="{baseIndex+3}"/>
 			</mx:VBox>
 		</mx:HBox>
 		<mx:HRule width="100%" />
-		<mx:Button id="cancelBtn" label="{ResourceUtil.getInstance().getString('bbb.micSettings.cancel')}" accessibilityName="{ResourceUtil.getInstance().getString('bbb.micSettings.cancel.toolTip')}"
-				   tabIndex="{baseIndex+3}" click="onCancelClicked()" styleName="micSettingsWindowPlaySoundButtonStyle" />
+		<mx:Button id="cancelBtn" tabIndex="{baseIndex+3}" click="onCancelClicked()" 
+				   label="{ResourceUtil.getInstance().getString('bbb.micSettings.cancel')}" 
+				   toolTip="{ResourceUtil.getInstance().getString('bbb.micSettings.cancel.toolTip')}"
+				   styleName="micSettingsWindowPlaySoundButtonStyle" />
 	</mx:VBox>
 </mx:TitleWindow>
