--- a/bigbluebutton-client/src/org/bigbluebutton/modules/present/ui/views/FileUploadWindow.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/modules/present/ui/views/FileUploadWindow.mxml
@@ -317,7 +317,7 @@ with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
     <mx:Canvas width="100%" height="145" verticalScrollPolicy="off">
       <mx:List width="100%" height="142" left="5" top="5" right="5" bottom="5" id="uploadedFilesList" alternatingItemColors="[#EFEFEF, #FEFEFE]" allowMultipleSelection="false"
                itemRenderer="org.bigbluebutton.modules.present.ui.views.UploadedPresentationRenderer"
-               dragEnabled="false" dataProvider="{presentationNamesAC}">
+               dragEnabled="false" dataProvider="{presentationNamesAC}" dataTipField="name">
       </mx:List>
     </mx:Canvas>
     <mx:Canvas width="100%" height="100%">
